Fix: delete 1px border on mobile menu

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -39,7 +39,6 @@
     top: 0;
     left: 0;
     background-color: white;
-    border: 1px solid red;
     z-index: 100;
 }
 .mobile-nav-menu {
